# Socratic-rag

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  FAQ.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PERFORMANCE_BENCHMARKING.md  PYPI_UPLOAD_INSTRUCTIONS.md  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CACHING_STRATEGY.md  CONTRIBUTING_TUTORIAL.md  FAQ_BY_SCENARIO.md  GUIDES_BY_ROLE.md  INTEGRATION_GUIDE.md  TROUBLESHOOTING.md  api-reference.md  embeddings.md  integrations.md  quickstart.md  vector-stores.md
examples/: 01_basic_rag.py  02_multi_vector_stores.py  03_openclaw_integration.py  04_langchain_integration.py  05_llm_powered_rag.py  06_rest_api.py  07_docker_containerization.py  08_deployment_patterns.py  09_advanced_rag_patterns.py  10_streaming_rag.py  11_real_time_updates.py
kubernetes/: README.md  deployment.yaml  qdrant-statefulset.yaml
src/socratic_rag/: __init__.py  async_client.py  client.py  deduplication.py  document_understanding.py  exceptions.py  hybrid_search.py  knowledge_base.py  llm_rag.py  models.py  query_enhancement.py  vector_db.py
src/socratic_rag/caching/: __init__.py  embedding_cache.py  search_cache.py
src/socratic_rag/chunking/: __init__.py  base.py  fixed_size.py  semantic.py
src/socratic_rag/embeddings/: __init__.py  base.py  sentence_transformers.py
src/socratic_rag/integrations/: __init__.py
src/socratic_rag/integrations/langchain/: __init__.py  retriever.py
src/socratic_rag/integrations/openclaw/: __init__.py  skill.py
src/socratic_rag/processors/: __init__.py  base.py  markdown.py  pdf.py  text.py
src/socratic_rag/vector_stores/: __init__.py  base.py  chromadb.py  faiss.py  qdrant.py
tests/: conftest.py  test_chunking.py  test_client.py  test_edge_cases.py  test_embeddings.py  test_integrations.py  test_llm_rag.py  test_models.py  test_module_imports.py  test_processors.py  test_vector_stores.py
tests/benchmarks/: __init__.py  test_performance.py
